Fix scrolling on mobile

--- a/src/functional_components/Drive/Drive.module.scss
+++ b/src/functional_components/Drive/Drive.module.scss
@@ -50,6 +50,7 @@
 @media (max-width: $screen_m) {
     .mainArea {
         padding: 0 16px;
+        overflow: auto;
     }
 
     .grid {
